ajusta rotas
